--- a/main/templates/main/open_work_orders.html
+++ b/main/templates/main/open_work_orders.html
@@ -4,21 +4,11 @@
             <div class="overview_item_title">Open Work Orders</div>
             {% if open_work_orders %}
             <div class="overview_item_value overview_header">
-                <p>
-                    Work Order
-                </p>
-                <p>
-                    Project
-                </p>
-                <p>
-                    Site
-                </p>
-                <p>
-                    Status
-                </p>
-                <p>
-                    Last Updated
-                </p>
+                <p>Work Order</p>
+                <p>Project</p>
+                <p>Site</p>
+                <p>Status</p>
+                <p>Last Updated</p>
             </div>
             {% for work_order in open_work_orders %}
             <div class="overview_item_value">
@@ -44,9 +34,7 @@
             {% endfor %}
             {% else %}
             <div class="overview_item_value">
-                <p>
-                    No open work orders
-                </p>
+                <p>No open work orders</p>
             </div>
             {% endif %}
         </div>
