--- a/bid/static/bid/css/bid.css
+++ b/bid/static/bid/css/bid.css
@@ -1,29 +1,91 @@
 @charset "utf-8";
 
-
-.scrollable {
-    height: 300px;
-    max-height: 300px;
-    width: 40%;
-    max-width: 40%;
-    overflow-y: auto;
+/* Labor and Travel Page of the Bid Sheet */
+/* .bid_container {
     border: 1px solid #ccc;
+    box-shadow: 0 0 10px #ccc;
+    width: 75%;
+    text-transform: uppercase;
+    margin: 0 auto;
     padding: 10px;
-}
+} */
 
-.filter_container {
+/* .bid_page_header { */
+/* border: 1px solid red; */
+/* display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+} */
+
+/* .bid_nav { */
+/* border: 1px solid green; */
+/* display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
     width: 100%;
-}
+    margin: 10px 0;
+} */
+
+/* .bid_nav a {
+    text-decoration: none;
+    color: #000d86;
+    background-color: #eee;
+    padding: 5px;
+} */
+
+/* #bid_labor_and_travel_form { */
+/* border: 1px solid blue; */
+/* width: 100%; */
+/* } */
+
+/* #bid_labor_and_travel_form label {
+    display: flex;
+    flex-direction: row;
+    margin: 2px 0;
+    width: 20%;
+} */
+
+/* #bid_labor_and_travel_form select,
+#bid_labor_and_travel_form input {
+    margin: 2px 0;
+    width: 40%;
+    border: 1px solid #ccc;
+} */
+
+
+/* .bid_form_container { */
+/* border: 1px solid blue; */
+/* width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+} */
+
+/* .bid_button_container {
+    /* border: 1px solid red; */
+/* width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+} */
+
+/* .filter_container {
+    width: 100%;
+} */
 
 #material_form {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 100%;
 }
 
 
 #material_list {
-    border: 1px solid orange;
-    width: 100% !important;
+    /* border: 1px solid orange; */
+    width: 100%;
 
 }
 
@@ -37,19 +99,25 @@
     padding: 10px;
 }
 
+.scrollable_div {
+    height: 300px;
+    max-height: 300px;
+    min-height: 300px;
+    width: 100%;
+    max-width: 100%;
+    overflow-y: auto;
+    border: 1px solid #ccc;
+    padding: 10px;
+}
+
 #available_materials_table {
     /* border: 1px solid yellow; */
     width: 100%;
     text-align: left;
 }
 
-#bid_materials_list {
-    border: 1px solid green;
-    width: 100%;
-}
-
 #bid_materials_summary_table {
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     width: 100%;
     text-align: left;
 }
