--- a/bid/templates/bid/bid_details_equipment.html
+++ b/bid/templates/bid/bid_details_equipment.html
@@ -4,31 +4,59 @@
 {% block styles %}
 {% endblock %}
 {% block scripts %}
+<script src="{% static 'bid/js/bid.js' %}"></script>
 {% endblock %}
 {% block content %}
 
-<h1>Equipment for {{ bid.bid_project.project_name }}</h1>
+<div class="bid_container">
+    <h1>Equipment for {{ bid.bid_project.project_name }}</h1>
 
-<!-- Add a way for the user to navigate to the previous page (bid/bid_details_material.html) -->
-<a href="{% url 'bid:bid_details_material' bid.bid_id %}">Back to Material</a>
-
-<!-- Add a way for the user to navigate to the labor/travel page (bid/bid_details.html) -->
-<a href="{% url 'bid:bid_details' bid.bid_id %}">Back to Labor / Travel</a>
-
-<p>
-    Site Count : ({{ bid.bid_project.project_sites.count }})
-</p>
-{% for site in bid.bid_project.project_sites.all %}
-<small>
-    {{ site.site_id }} {{ site.site_name }}<br>
-    {{ site.address }},
-    {{ site.city }} {{ site.state }} {{ site.zip_code }}
-    {% if site.phone %}
-    <br>Phone: ({{ site.phone|slice:":3" }}) {{ site.phone|slice:"3:6" }}-{{ site.phone|slice:"6:10" }}
-    {% endif %}
-</small>
-{% endfor %}
+    <!-- Add a way for the user to navigate to different pages for the bid -->
+    <div class="bid_nav">
+        <a href="{% url 'bid:bid_details_material' bid.bid_id %}">Go to Material</a>
+        <a href="{% url 'bid:bid_details' bid.bid_id %}">Go to Labor / Travel</a>
+        <a href="{% url 'bid:bid_summary' bid.bid_id %}">Summary</a>
+    </div>
 
 
+    <!-- <p>
+        Site Count : ({{ bid.bid_project.project_sites.count }})
+    </p>
+    {% for site in bid.bid_project.project_sites.all %}
+    <small>
+        {{ site.site_id }} {{ site.site_name }}<br>
+        {{ site.address }},
+        {{ site.city }} {{ site.state }} {{ site.zip_code }}
+        {% if site.phone %}
+        <br>Phone: ({{ site.phone|slice:":3" }}) {{ site.phone|slice:"3:6" }}-{{ site.phone|slice:"6:10" }}
+        {% endif %}
+    </small>
+    {% endfor %} -->
+    <div class="bid_container">
+        <form method="post">
+            {% csrf_token %}
+
+            <h3>Eqiuipment Rentals</h3>
+            <div class="initial-bid_equipment-form bid_equipment-form" style="display:none;">
+                {{ bid_equipment_formset.empty_form.as_table }}
+            </div>
+
+            <input type="hidden" name="bid_equipment-TOTAL_FORMS" id="bid_equipment-TOTAL_FORMS"
+                value="{{ bid_equipment_formset.total_form_count }}" />
+            <input type="hidden" name="bid_equipment-INITIAL_FORMS" id="bid_equipment-INITIAL_FORMS"
+                value="{{ bid_equipment_formset.initial_form_count }}" />
+            {% for equipment_form in bid_equipment_formset %}
+            <div class="bid_equipment-form">
+                {{ bid_equipment_formset.management_form }}
+                {{ equipment_form.as_table }}
+            </div>
+            {% endfor %}
+            <button type="button" id="add_equipment">Add Equipment Entry</button>
+            <button type="button" id="remove_equipment">Remove Last Equipment Entry</button>
+
+            <input type="submit" value="Save" />
+        </form>
+    </div>
+</div>
 
 {% endblock %}
