--- a/main/static/main/css/dashboard.css
+++ b/main/static/main/css/dashboard.css
@@ -39,10 +39,10 @@
 }
 
 .open_work_orders {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     margin-bottom: 20px;
 }
 
 .recently_closed_work_orders {
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 }
